--- a/app/src/main/res/layout/people_list.xml
+++ b/app/src/main/res/layout/people_list.xml
@@ -14,18 +14,32 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
+        <LinearLayout
             android:layout_width="match_parent"
+            android:weightSum="4"
+            android:orientation="horizontal"
+            android:layout_height="wrap_content">
+        <EditText
+            android:layout_width="0dp"
+            android:layout_weight="3"
             android:layout_height="wrap_content"
-            android:text='@{peopleViewModel.testString}'
-            android:textSize="25sp" />
+            android:text='@={peopleViewModel.testString}'
+            android:textSize="20sp"
+            android:padding="10dp"
+            android:inputType="text"
+            android:layout_margin="5dp"
+            android:hint="@string/write_here"
+            tools:ignore="Autofill" />
 
         <Button
+            android:layout_margin="5dp"
             android:id="@+id/btnTest"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:text="@string/search"
             android:layout_height="wrap_content"
             android:onClick="@{()-> peopleViewModel.AtBtnClick()}" />
-
+        </LinearLayout>
         <android.support.v7.widget.RecyclerView
             android:id="@+id/list_people"
             android:layout_width="match_parent"
