--- a/app/src/main/res/layout/rv_item_person.xml
+++ b/app/src/main/res/layout/rv_item_person.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="ItemPeopleViewModel"
-            type="com.andrew.samir.manastmovies.adapters.ItemPeopleViewModel" />
+            type="com.andrew.samir.manastmovies.adapters.peopleAdapter.ItemPeopleViewModel" />
     </data>
 
     <android.support.v7.widget.CardView
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="7dp"
+        android:onClick="@{ItemPeopleViewModel::onItemClick}"
         app:cardCornerRadius="7dp"
         app:cardElevation="7dp">
 
@@ -22,7 +23,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layoutDirection="rtl"
-            android:onClick="@{ItemPeopleViewModel::onItemClick}"
             android:orientation="horizontal"
             android:weightSum="4"
             tools:ignore="UnusedAttribute">
@@ -33,13 +33,13 @@
                 android:layout_gravity="center"
                 android:layout_weight="3"
                 android:gravity="left"
-                android:textStyle="bold|italic"
                 android:padding="5dp"
-                android:text="@{ItemPeopleViewModel.categoryName}"
+                android:text="@{ItemPeopleViewModel.personalDetailsName}"
                 android:textColor="#000"
                 android:textSize="16sp"
-                tools:text="asdds"
-                tools:ignore="RtlHardcoded" />
+                android:textStyle="bold|italic"
+                tools:ignore="RtlHardcoded"
+                tools:text="Andrew" />
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/imgPerson"
